--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,13 @@ jobs:
       - name: Run PyInstaller
         run: |
           python -m PyInstaller Autoscanner.spec
-      - name: Create zip
-        run: zip -r -q Autoscanner.zip dist/Autoscanner
+      - name: Archive Release
+        uses: thedoctor0/zip-release@0.7.1
+        with:
+          type: 'zip'
+          filename: 'release.zip'
+          path: dist/Autoscanner
+          exclusions: '*.git* /*node_modules/* .editorconfig'
       - name: create release
         id: create_release
         uses: actions/create-release@v1
@@ -49,3 +54,5 @@ jobs:
           asset_path: dist/Autoscanner.zip
           asset_name: Autoscanner.zip
           asset_content_type: application/zip
+
+
