--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,25 @@ jobs:
           filename: 'release.zip'
           path: dist/Autoscanner
           exclusions: '*.git* /*node_modules/* .editorconfig'
+
+      - name: Get tag name from ref
+        shell: bash
+        run: echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
+        id: get_tag
+      - name: Create tag in public repository
+        run: |
+          cd ${{github.workspace}}/Autoscanner
+          git tag ${{ steps.get_tag.outputs.tag }}
+          git push --tags --porcelain
+        
       - name: create release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          tag_name: ${{  steps.get_tag.outputs.tag }}
+          release_name: ${{ steps.get_tag.outputs.tag }}
           overwrite: true
           body: |
             Test AutoRelease
