--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         id: get_tag
       - name: Create tag in public repository
         run: |
-          cd ${{github.workspace}}/Autoscanner
+          cd ${{github.workspace}}
           git tag ${{ steps.get_tag.outputs.tag }}
           git push --tags --porcelain
         
