--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,10 @@ jobs:
           path: dist/Autoscanner
           exclusions: '*.git* /*node_modules/* .editorconfig'
 
-      - name: Get tag name from ref
-        shell: bash
-        run: echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
-        id: get_tag
       - name: Create tag in public repository
         run: |
           cd ${{github.workspace}}
-          git tag ${{ steps.get_tag.outputs.tag }}
+          git tag v1.2.4
           git push --tags --porcelain
         
       - name: create release
@@ -48,9 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{  steps.get_tag.outputs.tag }}
-          release_name: ${{ steps.get_tag.outputs.tag }}
-          overwrite: true
+          tag_name: v1.2.4
+          release_name: Release v1.2.4
           body: |
             Test AutoRelease
           draft: false
