--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Build Workflow
 
-on:
+on:  
   push:
-    branches: development
+    tags:
+      - '*'
 
 jobs:
   build-windows:
@@ -11,7 +12,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
       - name: Install Python
         uses: actions/setup-python@v1
         with:
