--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.release.outputs.upload_url}}
-          asset_path: dist/Autoscanner.zip
+          asset_path: Autoscanner.zip
           asset_name: Autoscanner.zip
           asset_content_type: application/zip
 
