--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.release.outputs.upload_url}}
-          asset_path: Autoscanner.zip
-          asset_name: Autoscanner.zip
+          asset_path: .
+          asset_name: release.zip
           asset_content_type: application/zip
 
 
