--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Install requirements
         run: |
           pip install -r requirements.txt
+      - name: Install GLEW
+        run: |
+          sudo apt-get update
+          sudo apt-get install libglew-dev
       - name: Run PyInstaller
         run: |
           python -m PyInstaller Autoscanner.spec
